feature/split-into-sub-project-structure (#9)
* update quarkus

* Move current image picker code into api module

* Update pipeline java version